--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
                     <!-- PROFILE PICTURE -->
                     <div id="profile" class="right">
-                        <img alt="profile-image" class="img-responsive" src="images/20637920_1422516984512032_1562031046173519869_n.jpg">
+                        <img alt="profile-image" class="img-responsive" src="images/profile/">
                         <div class="slant"></div>
 
                         <!--EMPTY PLUS BUTTON-->
@@ -241,19 +241,19 @@
                             specializing in front end development. Experienced with all stages of the
                             development cycle for dynamic web projects.Having an good knowledge
                             including advanced HTML5, CSS, CSS3, Github,Bootstrap, JSON, XML, Php, JavaScript,
-                            JQuery, Angular JS, Node JS,. Strong background in management and leadership.
+                            JQuery, Angular JS, Node JS,Meteor JS. Strong background in management and leadership.
                         </p>
                     </div>
 
                     <!-- BUTTONS -->
-                    <div id="about-btn" class="card-action">
-                        <div class="about-btn">
+<!--                    <div id="about-btn" class="card-action">-->
+<!--                        <div class="about-btn">-->
                             <!-- DOWNLOAD CV BUTTON -->
-                            <a href="#" class="btn waves-effect">Download CV</a>
+<!--                            <a href="#" class="btn waves-effect">Download CV</a>-->
                             <!-- CONTACT BUTTON -->
-                            <a href="#contact" class="btn waves-effect">Contact Me</a>
-                        </div>
-                    </div>
+<!--                            <a href="#contact" class="btn waves-effect">Contact Me</a>-->
+<!--                        </div>-->
+<!--                    </div>-->
                 </div>
             </div>
         </div>
@@ -777,12 +777,12 @@
                             <div class="col-md-12">
                                 <!--CLIENT IMAGE-->
                                 <div class="client-img center-block">
-                                    <img alt="client-image" class="center-block" src="images/clients/client-1.png">
+                                    <img alt="client-image" class="center-block" src="images/clients/testimonial1.jpeg">
                                 </div>
                                 <!--CLIENT QUOTE-->
                                 <blockquote>
                                    Pankaj is an inspiration in motion for all those who are around, be it from the field of Coding, Designing or any other walk of life. Pankaj has the can do spirit and a never say die attitude, which admires me the most. His ability to remain headstrong if the toughest of the situations and come out victorious is one USP of Pankaj which qualifies him to be on any team , no matter what the scope or difficulty of the task.
-                                    <cite>Mike, CEO, IT World.</cite>
+                                    <cite>HARSHDEEP, FOUNDER,MONKMAD Pvt ltd.</cite>
                                 </blockquote>
                             </div>
                         </div>
@@ -792,13 +792,12 @@
                             <div class="col-md-12">
                                 <!--CLIENT IMAGE-->
                                 <div class="client-img center-block">
-                                    <img alt="client-image" class="center-block" src="images/clients/client-2.png">
+                                    <img alt="client-image" class="center-block" src="images/clients/testimonial2.jpeg">
                                 </div>
                                 <!--CLIENT QUOTE-->
                                 <blockquote>
-                                    I work with John on several web development projects and I find him to be extremely
-                                    creative and a technical Front End Developer.
-                                    <cite>Mike, CEO, IT World.</cite>
+                                  Pankaj is a committed and enthusiastic individual who is always keen to develop his ideas and turn them into actionable reality. He will always try to excel himself and go one step further to achieve the best.                        
+                                    <cite>SARANG, FOUNDER,MONKMAD Pvt ltd.</cite>
                                 </blockquote>
                             </div>
                         </div>
