--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 <!--==========================================
                    V-CARD
 ===========================================-->
-<div id="v-card-holder" class="section animated pulse ">
+<div id="v-card-holder" class="section ">
     <div class="container">
         <div class="row">
             <div class="col-md-12 col-sm-12 col-xs-12">
@@ -807,15 +807,13 @@
                             <div class="col-md-12">
                                 <!--CLIENT IMAGE-->
                                 <div class="client-img center-block">
-                                    <img alt="client-image" class="center-block" src="images/clients/client-3.png">
+                                    <img alt="client-image" class="center-block" src="images/clients/testimonial3.jpeg">
                                 </div>
                                 <!--CLIENT QUOTE-->
                                 <blockquote>
-                                    I work with John on several web development projects and I find him to be extremely
-                                    creative and a technical Front End Developer. Jone expertise involves building
-                                    complex
-                                    Responsive Design layouts using HTML 5, CSS3, and JavaScript.
-                                    <cite>Mike, CEO, IT World.</cite>
+                                    Mr. Pankaj, in his most recent position, he had the responsibility to learn new technologies as much as he can. And he is so much enthusiastic that he passed every level & every test that we gave him. He has so much energy for work - in fact, he was able to perform as a leader and produced results better than any other employee in his position.
+                                    I personally believe he is a model member of our team and he was someone who provided consistent performance and managed to come up to all expectations.
+                                    <cite>YASH, FOUNDER,MONKMAD Pvt ltd.</cite>
                                 </blockquote>
                             </div>
                         </div>
@@ -1000,6 +998,7 @@
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTH5MID_3_pbNAP139evwYCMfErLJIYEU&callback=initMap">
     </script>
+    <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="11a00180-355b-43f8-a481-56ddb76c4d1c";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
 
 
 </body>
