--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="text-holder text-center">
                 <h2>PANKAJ CHOTALIYA</h2>
                 <h6>Devloper & Designer</h6>
-                <h5>MIN STACK Developer</h5>
+                <h5>MEAN STACK Developer</h5>
             </div>
         </div>
     </div>
@@ -159,7 +159,7 @@
                         <!-- NAME & STATUS -->
                         <div class="info-headings">
                             <h4 class="text-uppercase left">Pankaj Chotaliya</h4>
-                            <h6 class="text-capitalize left">Min Stack Devloper</h6>
+                            <h6 class="text-capitalize left">Mean Stack Devloper</h6>
                         </div>
 
                         <!-- CONTACT INFO -->
