--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 
     <title>Pankaj Chotaliya</title>
-    <link rel="icon" href="images/site/fav-icon.png">
+    <link rel="shortcut icon" href="images/clients/favicon.ico" type="image/x-icon">
+<link rel="icon" href="images/clients/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="stylesheets/Hover-master/css/hover.css">
     <link rel="stylesheet" href="stylesheets/Hover-master/css/hover-min.css">
     <link rel="stylesheet" href="stylesheets/Hover-master/css/hover.css.map">
@@ -23,7 +24,7 @@
     
 
     <!--APPLE TOUCH ICON-->
-    <link rel="apple-touch-icon" href="images/site/apple-touch-icon.png">
+    
 
 
     <!-- GOOGLE FONT -->
@@ -136,7 +137,7 @@
 
                     <!-- PROFILE PICTURE -->
                     <div id="profile" class="right">
-                        <img alt="profile-image" class="img-responsive" src="images/profile/">
+                        <img alt="profile-image" class="img-responsive" src="images/profile/14691361_1116566655107068_658113969635030261_o.jpg">
                         <div class="slant"></div>
 
                         <!--EMPTY PLUS BUTTON-->
