--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 
     <title>Pankaj Chotaliya</title>
-   <link rel="shortcut icon" href="images/profile/profile1.png" type="image/x-icon">
-<link rel="icon" href="images/profile/profile1.png" type="image/x-icon">
+   <link rel="shortcut icon" href="images/profile/pankaj.png" type="image/x-icon">
+<link rel="icon" href="images/profile/pankaj.png" type="image/x-icon">
     <link rel="stylesheet" href="stylesheets/Hover-master/css/hover.css">
     <link rel="stylesheet" href="stylesheets/Hover-master/css/hover-min.css">
     <link rel="stylesheet" href="stylesheets/Hover-master/css/hover.css.map">
