--- a/index.html
+++ b/index.html
@@ -238,9 +238,9 @@
                     <div class="card-content">
                         <!-- ABOUT PARAGRAPH -->
                         <p>
-                            Hello! I’m Pankaj Chotaliya. Min stack Developer with over 1 years of experience
+                            Hello! I’m Pankaj Chotaliya. Mean stack Developer with over 1 years of experience
                             specializing in front end development. Experienced with all stages of the
-                            development cycle for dynamic web projects.Having an good knowledge
+                            development cycle for dynamic web projects. Having an good knowledge
                             including advanced HTML5, CSS, CSS3, Github,Bootstrap, JSON, XML, Php, JavaScript,
                             JQuery, Angular JS, Node JS,Meteor JS. Strong background in management and leadership.
                         </p>
@@ -295,7 +295,7 @@
                         <!-- TIMELINE PARAGRAPH -->
                         <p>
                             I completed my preparatory education from this prestigious institution.
-                            I successful completed all the credits without any fallout and got A grade overall.
+                            I successfully completed all the credits without any fallout and got A grade overall.
                         </p>
                         <!-- BUTTON TRIGGER MODAL -->
 <!--
@@ -328,7 +328,7 @@
                         <!-- TIMELINE PARAGRAPH -->
                         <p>
                             I completed my high school degree from this prestigious institution.
-                            I successful completed all the credits without any fallout and got A grade overall.
+                            I successfully completed all the credits without any fallout and got A grade overall.
                         </p>
                     </div>
                 </div>
@@ -355,7 +355,7 @@
                         <!-- TIMELINE PARAGRAPH -->
                         <p>
                             I completed my computer science degree from this prestigious institution.
-                            I successful completed all the credits without any fallout and got A grade overall.
+                            I successfully completed all the credits without any fallout and got A grade overall.
                         </p>
 
                     </div>
@@ -386,7 +386,7 @@
 <!--
                         <p>
                             I completed this degree from this prestigious institution.
-                            I successful completed all the credits without any fallout and got A grade overall.
+                            I successfully completed all the credits without any fallout and got A grade overall.
                         </p>
 
                     </div>
