--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
                                 </div>
                                 <!-- THIRD SKILL BAR  -->
                                 <div class="skillbar" data-percent="70%">
-                                    <div class="skillbar-title"><span>jQuery</span></div>
+                                    <div class="skillbar-title"><span>JavaScript</span></div>
                                     <div class="skillbar-bar"></div>
                                     <div class="skill-bar-percent">70%</div>
                                 </div>
