--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
                                 <small>Monkmad</small>
                             </h6>
                             <h6>
-                                <small>Aug 2017 -Continue.. </small>
+                                <small>Aug 2017 -Oct 2017 </small>
                             </h6>
                         </div>
                         <!-- TIMELINE PARAGRAPH -->
@@ -631,18 +631,44 @@
                 </div>
             </div>
 
-            <!-- THIRD TIMELINE -->
+             <!--THIRD TIMELINE -->
+             <div class="timeline-block">
+                <!-- DOT -->
+                <div class="timeline-dot"><h6>F</h6></div>
+                <!-- TIMELINE CONTENT -->
+                <div class="card timeline-content">
+                    <div class="card-content">
+                        <!-- TIMELINE TITLE -->
+                        <h6 class="timeline-title">Frontend Developer</h6>
+                        <!-- TIMELINE TITLE INFO -->
+                        <div class="timeline-info">
+                            <h6>
+                                <small>ViitorCloud Technology</small>
+                            </h6>
+                            <h6>
+                                <small>Oct 2017 -Continue.... </small>
+                            </h6>
+                        </div>
+                        <!-- TIMELINE PARAGRAPH -->
+                        <p>
+                            I started my frontend carrier here,learning and working
+                            in various frontend aspects. I worked on about 3+ projects local and online.
+                        </p>
+
+                    </div>
+                </div>
+            </div>
             
 
             <!-- FOURTH TIMELINE -->
-<!--            <div class="timeline-block">-->
-                <!-- DOT -->
-<!--                <div class="timeline-dot"><h6>S</h6></div>-->
+            <!--<div class="timeline-block">
+                 <!--DOT -->
+                <!--<div class="timeline-dot"><h6>S</h6></div>-->-->
                 <!-- TIMELINE CONTENT -->
-<!--                <div class="card timeline-content">-->
-<!--                    <div class="card-content">-->
+              <!--<div class="card timeline-content">
+                    <div class="card-content">-->
                         <!-- TIMELINE TITLE -->
-<!--                        <h6 class="timeline-title">Senior Developer</h6>-->
+<!--                        <h6 class="timeline-title">Senior Developer</h6>
                         <!-- TIMELINE TITLE INFO -->
 <!--
                         <div class="timeline-info">
