--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
             <!-- FOURTH TIMELINE -->
             <!--<div class="timeline-block">
                  <!--DOT -->
-                <!--<div class="timeline-dot"><h6>S</h6></div>-->-->
+                <!--<div class="timeline-dot"><h6>S</h6></div>-->
                 <!-- TIMELINE CONTENT -->
               <!--<div class="card timeline-content">
                     <div class="card-content">-->
