img title name changes

--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@
                             <div class="col-md-12">
                                 <!--CLIENT IMAGE-->
                                 <div class="client-img center-block">
-                                    <img alt="client-image" class="center-block" src="images/clients/testimonial1.jpeg">
+                                    <img alt="client-image" class="center-block" src="images/clients/testimonial1.jpg">
                                 </div>
                                 <!--CLIENT QUOTE-->
                                 <blockquote>
@@ -770,7 +770,7 @@
                             <div class="col-md-12">
                                 <!--CLIENT IMAGE-->
                                 <div class="client-img center-block">
-                                    <img alt="client-image" class="center-block" src="images/clients/testimonial3.jpeg">
+                                    <img alt="client-image" class="center-block" src="images/clients/testimonial3.jpg">
                                 </div>
                                 <!--CLIENT QUOTE-->
                                 <blockquote>
